IMPLEMENTATO MEMENTO RISPETTANDO PATTERN, MODIFICATO ConcreteChangheManagerMediator.class COME SINGLETON FELMENTE AL PATTERN.